--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ZenUML/core": "npm:@zenuml/core@^3.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
